overflow on works imgs fixed

--- a/Digital_Portfolio/styles.css
+++ b/Digital_Portfolio/styles.css
@@ -290,6 +290,7 @@ body {
         width: 100%;
         height: 200%;
         transition: .5s;
+        overflow-y: hidden;
     }
 
 }
